cluster/apps/home/scrutiny/scrutiny-collector.yaml
---
apiVersion: apps/v1
kind: DaemonSet
# kind: Deployment
metadata:
  name: scrutiny-collector
  namespace: home
spec:
  selector:
    matchLabels:
      app: scrutiny-collector
  # replicas: 3
  template:
    metadata:
      labels:
        app: scrutiny-collector
    spec:
      volumes:
        - name: tz-config
          hostPath:
            path: /etc/localtime
        - name: udev
          hostPath:
            path: /run/udev
      containers:
        - name: scrutiny-collector
          image: analogj/scrutiny:v0.3.12-collector
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 128Mi
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_RAWIO
          ports:
            - containerPort: 8080
              name: http-api
          volumeMounts:
            - mountPath: "/etc/localtime"
              readOnly: true
              name: tz-config
            - name: udev
              mountPath: /run/udev:ro
